@@ -99,7 +99,7 @@ if ($num_defences > 0 && $total_sector_mines > 0 && !$owner && $shipavg > $mine_
         $l_chm_hehitminesinsector = str_replace("[chm_playerinfo_character_name]", $playerinfo['character_name'], $l_chm_hehitminesinsector);
         $l_chm_hehitminesinsector = str_replace("[chm_roll]", "$roll", $l_chm_hehitminesinsector);
         $l_chm_hehitminesinsector = str_replace("[chm_sector]", $sector, $l_chm_hehitminesinsector);
-        \bnt\sector_defense::message_defense_owner ($db, $sector, $l_chm_hehitminesinsector);
+        \bnt\sectorDefense::message_defense_owner ($db, $sector, $l_chm_hehitminesinsector);
 
         // If the player has enough mine deflectors then subtract the ammount and continue
         if ($playerinfo['dev_minedeflector'] >= $roll)
@@ -162,7 +162,7 @@ if ($num_defences > 0 && $total_sector_mines > 0 && !$owner && $shipavg > $mine_
                     player_log ($db, $playerinfo['ship_id'], LOG_SHIP_DESTROYED_MINES, "$sector|$pod");
                     $l_chm_hewasdestroyedbyyourmines = str_replace("[chm_playerinfo_character_name]", $playerinfo['character_name'], $l_chm_hewasdestroyedbyyourmines);
                     $l_chm_hewasdestroyedbyyourmines = str_replace("[chm_sector]", $sector, $l_chm_hewasdestroyedbyyourmines);
-                    \bnt\sector_defense::message_defense_owner ($db, $sector, $l_chm_hewasdestroyedbyyourmines);
+                    \bnt\sectorDefense::message_defense_owner ($db, $sector, $l_chm_hewasdestroyedbyyourmines);
                     echo $l_chm_yourshiphasbeendestroyed . "<br><br>";
 
                     // Survival
